nav fixed and overflow hidden. Hero index fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,19 @@ body {
 nav {
   background-color: #829cbc;
   color: white;
-  padding: 20px 50px;
+  height: 80px;
+  padding: 0 20px 0 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
-/* .menuBrand {
-  display: flex;
-  flex-direction: column;
+/* #fixedNav {
+  position: fixed;
 } */
 
 .menuItems a {
@@ -71,12 +75,17 @@ nav {
   height: 50vh;
   background-size: cover;
   background-position: center;
+  /* z-index: 0; */
 }
 
 .heroContent {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  /* z-index: 1; */
+
+  padding-top: 200px;
+  position: relative;
 }
 
 .heroTitle {
@@ -84,9 +93,10 @@ nav {
   font-weight: 400;
   color: white;
   z-index: 1;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  padding-top: 50px;
+  padding-top: 200px;
+  position: relative; */
 }
 .btn {
   width: 150px;
@@ -96,8 +106,9 @@ nav {
   border: none;
   background-color: #829cbc;
   color: white;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+  z-index: 1;
   opacity: 0.8;
 }
 
